# trader

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
requirements/: defense.md  education_defense.md  education_integrated.md  education_offense.md  integrated.md  offense.md
scripts/: backup.sh
src/api/: __init__.py  database.py  main.py  models.py  scheduler.py
src/api/routers/: __init__.py  alerts.py  education.py  portfolio.py  review.py  risk.py  screening.py  signals.py  simulation.py
src/strategy/: __init__.py  alerts.py  education.py  explanations.py  health.py  risk.py  screener.py  signals.py  simulation.py
src/ui/: app.py  config.py
src/ui/components/: __init__.py  alert_banner.py  explanation_popup.py  health_gauge.py  learning_card.py  sector_heatmap.py  signal_card.py  stage_indicator.py
src/ui/pages/: dashboard.py  learning.py  portfolio.py  profile.py  screening.py  settings.py  simulation.py
src/ui/views/: screening.py  settings.py  simulation.py
