[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "traders-tool"
version = "0.1.0"
description = "Stock investment tool for lazy investors"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.36",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "streamlit>=1.30.0",
    "apscheduler>=3.10.4",
    "pydantic>=2.5.0",
    "httpx>=0.26.0",
    "plotly>=5.18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
